# vision-os

./: .editorconfig  .gitignore  .travis.yml  README.md  hardhat.config.js  hardhat.config.ts  index.ts  package.json  truffle-config.js  tsconfig.build.json  tsconfig.json
.github/workflows/: build.yml  dep.yml  tests.js.yml  tests.yml
api/: lib.ts
artifacts/@openzeppelin/contracts/access/Ownable.sol/: Ownable.dbg.json
artifacts/@openzeppelin/contracts/token/ERC20/ERC20.sol/: ERC20.dbg.json  ERC20.json
artifacts/@openzeppelin/contracts/token/ERC20/extensions/IERC20Metadata.sol/: IERC20Metadata.dbg.json
artifacts/contracts/Idea.sol/: Idea.dbg.json  Idea.json
artifacts/contracts/Prop.sol/: Proposal.json
cache/: solidity-files-cache.json
contracts/: Idea.sol  Prop.sol  Proposal.sol  RecoveryGroup.sol  User.sol
contracts/governance/: Funding.sol  Prop.sol
contracts/interfaces/: IHasMetadata.sol
deploy/: vision_dao.ts
fixtures/: beacon_layer.ipldsch  dao.md
fixtures/modules/: .gitignore  Cargo.toml  Makefile.toml  README.md  todo.org
fixtures/modules/beacon_dao-allocator/: Cargo.toml
fixtures/modules/beacon_dao-allocator/src/: lib.rs
fixtures/modules/beacon_dao-allocator_manager/: Cargo.toml
fixtures/modules/beacon_dao-allocator_manager/src/: lib.rs
fixtures/modules/beacon_dao-display_manager/: Cargo.toml
fixtures/modules/beacon_dao-display_manager/src/: dialogue.html  dialogue.js  index.html  index.js  lib.rs
fixtures/modules/beacon_dao-display_manager/src/netdialogue/: ipfsdialogue.html  ipfsdialogue.js  netdialogue.html  netdialogue.js
fixtures/modules/beacon_dao-display_manager/src/taskbar/: taskbar.html  taskbar.js
fixtures/modules/beacon_dao-dom/: Cargo.toml
fixtures/modules/beacon_dao-dom/src/: lib.rs
fixtures/modules/beacon_dao-fetch/: Cargo.toml
fixtures/modules/beacon_dao-fetch/src/: lib.rs
fixtures/modules/beacon_dao-hello_world/: Cargo.toml
fixtures/modules/beacon_dao-hello_world/src/: lib.rs
fixtures/modules/beacon_dao-hello_world/src/tests/: web.rs
fixtures/modules/beacon_dao-hello_world_alloc/: Cargo.toml
fixtures/modules/beacon_dao-hello_world_alloc/src/: lib.rs
fixtures/modules/beacon_dao-ipfs/: Cargo.toml
fixtures/modules/beacon_dao-ipfs/src/: lib.rs
fixtures/modules/beacon_dao-logger/: Cargo.toml
fixtures/modules/beacon_dao-logger/src/: lib.rs
fixtures/modules/beacon_dao-logger_manager/: Cargo.toml
fixtures/modules/beacon_dao-logger_manager/src/: lib.rs
fixtures/modules/beacon_dao-mock_alloc/: Cargo.toml
fixtures/modules/beacon_dao-mock_alloc/src/: lib.rs
fixtures/modules/beacon_dao-permissions/: Cargo.toml  README.org
fixtures/modules/beacon_dao-permissions/src/: lib.rs
fixtures/modules/beacon_dao-permissions_consent/: Cargo.toml
fixtures/modules/beacon_dao-permissions_consent/src/: lib.rs
fixtures/modules/beacon_dao-permissions_test/: Cargo.toml
fixtures/modules/beacon_dao-permissions_test/src/: lib.rs
fixtures/modules/beacon_dao-scheduler/: Cargo.toml
fixtures/modules/beacon_dao-scheduler/src/: lib.rs  main.rs
fixtures/modules/beacon_dao-scheduler/src/common/: memory.rs  mod.rs
fixtures/modules/beacon_dao-scheduler/src/runtime/: api.rs  gc.rs  mod.rs
fixtures/modules/beacon_dao-test/: Cargo.toml
fixtures/modules/beacon_dao-test/src/: lib.rs  main.rs
fixtures/modules/beacon_dao-test_ping/: Cargo.toml
fixtures/modules/beacon_dao-test_ping/src/: lib.rs
fixtures/modules/beacon_dao-test_pong/: Cargo.toml
fixtures/modules/beacon_dao-test_pong/src/: lib.rs
fixtures/modules/beacon_dao-web3/: Cargo.toml
fixtures/modules/beacon_dao-web3/src/: lib.rs
migrations/: 2_deploy_contracts.js  conf.js
src/: Idea.sol
src/governance/: Funding.sol  Prop.sol
static/: index.html
test/: Idea.test.ts  Proposal.test.ts  common.ts  idea.js
types/: hardhat.d.ts  index.d.ts  index.ts  schema.ts
types/contracts/: Idea.ts  index.ts
types/contracts/Prop.sol/: Proposal.ts  index.ts
types/factories/@openzeppelin/contracts/token/ERC20/: ERC20__factory.ts
types/factories/contracts/: Idea__factory.ts  index.ts
types/factories/contracts/Prop.sol/: Proposal__factory.ts  index.ts
