[package]
name = "beacon_dao-modules"
description = "Modules written for the Vision Beacon DAO by the Vision software team."
repository = "git@github.com:vision-dao/beacon-dao.git"
version = "0.1.0"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[workspace]
members = ["beacon_dao-hello_world", "beacon_dao-permissions", "beacon_dao-logger", "beacon_dao-scheduler", "beacon_dao-allocator"]

[dependencies]
wasm-bindgen = "0.2"

[build-dependencies]
wasm-pack = "0.10.3"
cargo-make = "0.35.13"
