[package]
name = "beacon_dao-modules"
description = "Modules written for the Vision Beacon DAO by the Vision software team."
repository = "git@github.com:vision-dao/beacon-dao.git"
version = "0.1.0"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
module = []

[workspace]
members = ["beacon_dao-permissions", "beacon_dao-logger", "beacon_dao-allocator", "beacon_dao-hello_world_alloc", "beacon_dao-display_manager", "beacon_dao-allocator_manager", "beacon_dao-logger_manager", "beacon_dao-dom", "beacon_dao-fetch", "beacon_dao-mock_alloc", "beacon_dao-test_ping", "beacon_dao-test_pong", "beacon_dao-test", "beacon_dao-scheduler"]

[build-dependencies]
wasm-pack = "0.10.3"
cargo-make = "0.35.13"
