[package]
name = "beacon_dao-allocator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.0"
web-sys = { version = "0.3.58", features = ["console"] }
vision-utils = { git = "ssh://git@github.com/Vision-DAO/vision-utils.git" }
vision-derive-internal = { git = "ssh://git@github.com/Vision-DAO/vision-utils.git" }
wasmer = { version = "2.3.0", features = ["js", "std", "wasm-types-polyfill"], default-features = false }
snafu = "0.7.2"
serde_json = "1.0.86"
serde = "1.0.145"
