[package]
name = "beacon_dao-allocator"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
module = []

[dependencies]
vision-utils = { git = "ssh://git@github.com/Vision-DAO/vision-utils.git" }
vision-derive-internal = { git = "ssh://git@github.com/Vision-DAO/vision-utils.git" }
snafu = "0.7.2"
serde_json = "1.0.86"
serde = { version = "1.0.145", features = ["serde_derive"] }
lazy_static = "1.4.0"
