[package]
name = "beacon_dao-allocator_manager"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
module = []

[dependencies]
beacon_dao-permissions = { path = "../beacon_dao-permissions" }
vision-utils = { git = "ssh://git@github.com/Vision-DAO/vision-utils.git" }
vision-derive = { git = "ssh://git@github.com/Vision-DAO/vision-utils.git" }
serde = { version = "1.0.145", features = ["serde_derive"] }