[package]
name = "beacon_dao-display_manager"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
module = []

[dependencies]
vision-utils = { git = "ssh://git@github.com/Vision-DAO/vision-utils.git" }
vision-derive = { git = "ssh://git@github.com/Vision-DAO/vision-utils.git" }
beacon_dao-dom = { path = "../beacon_dao-dom" }
lazy_static = "1.4.0"
beacon_dao-fetch = { path = "../beacon_dao-fetch" }