[package]
name = "beacon_dao-display_manager"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
module = []

[dependencies]
vision-utils = { git = "ssh://git@github.com/Vision-DAO/vision-utils.git" }
vision-derive = { git = "ssh://git@github.com/Vision-DAO/vision-utils.git" }
beacon_dao-dom = { path = "../beacon_dao-dom" }
beacon_dao-fetch = { path = "../beacon_dao-fetch" }
lazy_static = "1.4.0"
serde = { version = "1.0.145", features = ["serde_derive"] }
beacon_dao-web3 = { path = "../beacon_dao-web3" }
beacon_dao-ipfs = { path = "../beacon_dao-ipfs" }
hex = "0.4.3"
beacon_dao-logger_manager = { path = "../beacon_dao-logger_manager" }
ethabi = { version = "18.0.0", features = ["serde"], default-features = false }
fixed-hash = { version = "0.8.0", default-features = false }
ethbloom = { version = "0.13.0", default-features = false }
serde_json = "1.0.93"