[package]
name = "beacon_dao-fetch"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
module = []

[dependencies]
vision-utils = { git = "ssh://git@github.com/Vision-DAO/vision-utils.git", features = [] }
vision-derive = { git = "ssh://git@github.com/Vision-DAO/vision-utils.git", features = [] }
beacon_dao-permissions = { path = "../beacon_dao-permissions", features = [] }
once_cell = "1.16.0"
wasm-bindgen = "0.2.0"
js-sys = "0.3.60"
serde = { version = "1.0.145", features = ["serde_derive"] }
serde_json = "1.0.86"
beacon_dao-dom = { path = "../beacon_dao-dom" }
serde-wasm-bindgen = "0.4.5"
web-sys = "0.3.60"