[package]
name = "beacon_dao-fetch"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
module = []

[dependencies]
vision-utils = { git = "https://github.com/Vision-DAO/vision-utils", features = [] }
vision-derive = { git = "https://github.com/Vision-DAO/vision-utils", features = [] }
beacon_dao-permissions = { path = "../beacon_dao-permissions", features = [] }
once_cell = "1.16.0"
serde = { version = "1.0.145", features = ["serde_derive"] }
serde_json = "1.0.86"
beacon_dao-dom = { path = "../beacon_dao-dom" }
beacon_dao-logger_manager = { path = "../beacon_dao-logger_manager" }