[package]
name = "beacon_dao-hello_world"
description = "A module for the Beacon DAO that prints a simple hello world message."
repository = "git@github.com:vision-dao/beacon-dao.git"
version = "0.1.0"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.0"
