[package]
name = "beacon_dao-hello_world_alloc"
version = "0.1.0"
description = "A utility for displaying console output from Vision modules."
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
module = []

[dependencies]
vision-utils = { git = "ssh://git@github.com/Vision-DAO/vision-utils.git", features = [] }
vision-derive = { git = "ssh://git@github.com/Vision-DAO/vision-utils.git", features = [] }
beacon_dao-logger_manager = { path = "../beacon_dao-logger_manager", features = [] }
