[package]
name = "beacon_dao-ipfs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
module = []

[dependencies]
vision-utils = { git = "https://github.com/Vision-DAO/vision-utils", features = [] }
vision-derive = { git = "https://github.com/Vision-DAO/vision-utils", features = [] }
beacon_dao-permissions = { path = "../beacon_dao-permissions", features = [] }
serde = { version = "1.0.145", features = ["serde_derive"] }
serde_json = "1.0.86"
beacon_dao-fetch = { path = "../beacon_dao-fetch" }
lazy_static = "1.4.0"
beacon_dao-logger_manager = { path = "../beacon_dao-logger_manager" }