[package]
name = "beacon_dao-logger"
version = "0.1.0"
description = "A utility for displaying console output from Vision modules."
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
module = []

[dependencies]
web-sys = { version = "0.3.58", features = ["console"] }
vision-utils = { git = "https://github.com/Vision-DAO/vision-utils", features = [] }
vision-derive = { git = "https://github.com/Vision-DAO/vision-utils", features = [] }
once_cell = "1.16.0"