[package]
name = "beacon_dao-logger_manager"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
module = []

[dependencies]
beacon_dao-permissions = { path = "../beacon_dao-permissions" }
vision-derive = { git = "https://github.com/Vision-DAO/vision-utils", features = [] }
vision-utils = { git = "https://github.com/Vision-DAO/vision-utils" }
beacon_dao-logger = { path = "../beacon_dao-logger", features = [] }