[package]
name = "beacon_dao-mock_alloc"
version = "0.1.0"
description = "A utility for interacting with the DOM from Vision modules."
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
module = []

[dependencies]
vision-utils = { git = "https://github.com/Vision-DAO/vision-utils", features = [] }
vision-derive = { git = "https://github.com/Vision-DAO/vision-utils", features = ["no_alloc"] }
