[package]
name = "beacon_dao-permissions"
description = "A module for the Beacon DAO that allows actors to request access to another actor."
version = "0.1.0"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.0"
web-sys = { version = "0.3.58", features = ["console"] }

[dependencies.beacon_dao-scheduler]
path = "../beacon_dao-scheduler"