[package]
name = "beacon_dao-permissions"
description = "A module for the Beacon DAO that allows actors to request access to another actor."
version = "0.1.0"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
module = []

[dependencies]
web-sys = { version = "0.3.58", features = ["console"] }
vision-utils = { git = "https://github.com/Vision-DAO/vision-utils" }
vision-derive = { git = "https://github.com/Vision-DAO/vision-utils", features = [] }
lazy_static = "1.4.0"
