[package]
name = "beacon_dao-permissions_consent"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
module = []

[dependencies]
vision-utils = { git = "https://github.com/Vision-DAO/vision-utils" }
vision-derive = { git = "https://github.com/Vision-DAO/vision-utils" }
lazy_static = "1.4.0"
serde = { version = "1.0.145", features = ["serde_derive"] }
beacon_dao-permissions = { path = "../beacon_dao-permissions" }
beacon_dao-display_manager = { path = "../beacon_dao-display_manager" }
beacon_dao-logger_manager = { path = "../beacon_dao-logger_manager" }