[package]
name = "beacon_dao-permissions_test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
module = []

[dependencies]
vision-utils = { git = "ssh://git@github.com/Vision-DAO/vision-utils.git" }
vision-derive = { git = "ssh://git@github.com/Vision-DAO/vision-utils.git" }
beacon_dao-permissions_consent = { path = "../beacon_dao-permissions_consent" }
beacon_dao-logger_manager = { path = "../beacon_dao-logger_manager" }