[package]
name = "beacon_dao-scheduler"
description = "A module for the Beacon DAO that acts as a \"postmaster\", implementing a process actor framework."
repository = "git@github.com:vision-dao/beacon-dao.git"
version = "0.1.0"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasmer = { version = "2.3.0", features = ["js", "std", "wasm-types-polyfill"], default-features = false }
snafu = "0.7.1"
