[package]
name = "beacon_dao-scheduler"
description = "A module for the Beacon DAO that acts as a \"postmaster\", implementing a process actor framework."
repository = "git@github.com:vision-dao/beacon-dao.git"
version = "0.1.0"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
path = "src/main.rs"
name = "vision"

[features]
default = []
module = ["wasm"]
wasm = ["wasmer/js", "wasmer/wasm-types-polyfill", "wasmer/std"]
cli = ["wasmer/sys-default"]

[dependencies]
wasm-bindgen = "0.2"
wasmer = { version = "3.0.2", default-features = false }
snafu = "0.7.1"
console_error_panic_hook = "0.1.7"
parking_lot = "0.12.1"
web-sys = { version = "0.3.60", features = ["CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "Window"] }