[package]
name = "beacon_dao-test_ping"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
module = []

[dependencies]
vision-utils = { git = "ssh://git@github.com/Vision-DAO/vision-utils.git" }
vision-derive = { git = "ssh://git@github.com/Vision-DAO/vision-utils.git", features = [] }