[package]
name = "beacon_dao-test_pong"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
module = []

[dependencies]
vision-utils = { git = "https://github.com/Vision-DAO/vision-utils" }
vision-derive = { git = "https://github.com/Vision-DAO/vision-utils", features = [] }
