[package]
name = "beacon_dao-web3"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
module = []

[dependencies]
vision-utils = { git = "ssh://git@github.com/Vision-DAO/vision-utils.git", features = [] }
vision-derive = { git = "ssh://git@github.com/Vision-DAO/vision-utils.git", features = [] }
beacon_dao-permissions = { path = "../beacon_dao-permissions", features = [] }
serde = { version = "1.0.145", features = ["serde_derive"] }
serde_json = "1.0.86"
beacon_dao-fetch = { path = "../beacon_dao-fetch" }
lazy_static = "1.4.0"